examples/test/testpolicy14799.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14799
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key44: value46
      key49: value33
      key29: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value36
          key14: value39
          key40: value37
      podSelector:
        matchLabels:
          key41: value42
          key20: value46
          key35: value5
